gitops/workloads/manifests/semaphore/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphore
  labels:
    app.kubernetes.io/name: semaphore
  annotations:
    argocd.argoproj.io/sync-wave: "3" # sync third
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: semaphore
  template:
    metadata:
      labels:
        app.kubernetes.io/name: semaphore
    spec:
      containers:
        - name: semaphore
          image: semaphoreui/semaphore:v2.9.64
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
