gitops/workloads/manifests/semaphore/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: semaphore
  labels:
    app.kubernetes.io/name: semaphore
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: semaphore
