gitops/workloads/manifests/semaphore/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semaphore
  labels:
    app.kubernetes.io/name: semaphore
  annotations:
    gethomepage.dev/description: Ansible UI
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Cluster Management"
    gethomepage.dev/icon: semaphore.png
    gethomepage.dev/name: Semaphore
spec:
  rules:
    - host: "semaphore.bodkys.house"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: semaphore
                port:
                  name: http
